--- a/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
+++ b/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
@@ -10,7 +10,7 @@ description: Learn what are cloud infrastructure state files and how to properly
 
 - what are cloud infrastructure state files
 - how to properly store cloud infrastructure state files using different Pulumi backends
-- which Pulumi backends in different contexts
+- which Pulumi backends to use in different contexts
 
 :::
 
@@ -32,7 +32,7 @@ Read more about Pulumi, environments, and other deployment-related concepts in o
 
 One of the fundamental concepts of any IaC framework are cloud infrastructure state files. Every framework handles them differently, but in all cases, state files represent the state of all deployed cloud infrastructure resources. Things like which resources are currently deployed, which configuration params were used upon deploying them, and more, are just some of the information these state files contain.
 
-It's important to know that state files must not be lost or deleted, because otherwise, the connection between our IaC framework and the actual cloud infrastructure resources would also be lost. Meaning, we would loose the ability to update existing cloud infrastructure resources or even delete them (using the IaC framework).
+It's important to know that state files must not be lost or deleted, because otherwise, the connection between our IaC framework and the actual cloud infrastructure resources would also be lost. Meaning, we would lose the ability to update existing cloud infrastructure resources or even delete them (using the IaC framework).
 
 :::caution
 If it happens that we've lost our state files and we wanted to delete all of the deployed cloud infrastructure resources, we would have to do it manually, via the cloud provider's user interface or using a CLI.
