--- a/docs/key-topics/ci-cd/testing.mdx
+++ b/docs/key-topics/ci-cd/testing.mdx
@@ -87,7 +87,7 @@ Now that we've briefly covered different the fundamental types of tests, let's s
 
 ### The Order of Execution And Optimizing For Fast Feedback Loop
 
-While designing our CI/CD workflow, one of thing we need to pay attention to is how fast it is being executed or in other words, how fast it can provide valuable feedback to our organization.
+While designing our CI/CD workflow, one of the elements we need to pay attention to is how fast it is being executed or in other words, how fast it can provide valuable feedback to our organization.
 
 Because of this, it is recommended that we first run tests that take the least amount of time to finish. This is because if one of those fail, in most cases, there is no reason to continue with the rest of the tests, which take more time to finish.
 
@@ -136,7 +136,7 @@ Merging strategies are covered in the upcoming [Workflows](/docs/how-to-guides/c
 
 #### Local Development
 
-It's useful to mention that developers should also able to run tests without the need of an external CI/CD workflow. This is important when making code changes locally, where we want to have a fast feedback loop and quickly ensure we aren't breaking any existing functionality. We certainly don't want to end up waiting for the CI/CD workflow to tell us that.
+It's useful to mention that developers should also be able to run tests without the need of an external CI/CD workflow. This is important when making code changes locally, where we want to have a fast feedback loop and quickly ensure we aren't breaking any existing functionality. We certainly don't want to end up waiting for the CI/CD workflow to tell us that.
 
 ### Deploying Short-Lived (Ephemeral) Environments For Testing Purposes
 
