--- a/docs/key-topics/ci-cd/version-control.mdx
+++ b/docs/key-topics/ci-cd/version-control.mdx
@@ -64,7 +64,7 @@ These branches should be made [protected](https://docs.github.com/en/github/admi
 Finally, one of these branches will always be a starting point for every fix or a new feature that needs to be implemented. Usually, this is the `dev` branch which should be marked as the [default branch](https://docs.github.com/en/github/administering-a-repository/changing-the-default-branch) in your repository.
 
 :::info
-Visit the [CI/CD](#) guide to learn how code changes are propagated from one shared branch to another, and how they are ultimately deployed to real users.
+Visit the [Workflows](/docs/key-topics/ci-cd/workflows) key topic to learn how code changes are propagated from one shared branch to another, and how they are ultimately deployed to real users.
 :::
 
 #### Isolated (development) branches
