--- a/docs/key-topics/ci-cd/environments.mdx
+++ b/docs/key-topics/ci-cd/environments.mdx
@@ -20,7 +20,7 @@ Get your CI/CD set up in no time with the built-in [CI/CD scaffold](/docs/how-to
 
 ## Introduction
 
-Deploying your project multiple environments enables you to preview and test new features and bug fixes, before actually rolling them out to real users. This helps us in making our project as stable as possible, and, ultimately, providing the best possible user experience.
+Deploying your project into multiple environments enables us to preview and test new features and bug fixes, before actually rolling them out to real users. This helps us in making our project as stable as possible, and, ultimately, providing the best possible user experience.
 
 :::info
 To learn more about environments in general, check out the [Environments](/docs/key-topics/deployment/environments) key topic.
@@ -64,7 +64,7 @@ On the other hand, **isolated environments** are environments that are deployed 
 :::info
 Within an organization, it's common practice for developers to have their own cloud (AWS) account, which they use to deploy their isolated environments. This way we ensure that they don't impact one of the (sensitive) shared environments and enable them to perform experiments more freely.
 
-Read more about how to organize cloud accounts in the [CI/CD](#) section.
+Read more about how to organize cloud accounts in the [Cloud (AWS) Accounts](/docs/key-topics/ci-cd/environments#cloud-aws-accounts) section.
 :::
 
 ### Long-lived and Short-lived Environments
@@ -91,7 +91,7 @@ The following diagram shows the most common organization of shared and isolated 
 <!-- vale on -->
 
 :::info
-This structure of environments is also mirrored by branches in your project's Git repository. More on this in the [Branching](#) guide that follows.
+This structure of environments is also mirrored by branches in your project's Git repository. More on this in the [Version Control](/docs/key-topics/ci-cd/version-control) topic that follows.
 :::
 
 ### Shared Environments
