fix: broken links

--- a/docs/how-to-guides/upgrade-webiny/overview.mdx
+++ b/docs/how-to-guides/upgrade-webiny/overview.mdx
@@ -18,7 +18,7 @@ description: Learn how to upgrade your Webiny project.
 Whenever you're doing an upgrade, we recommended that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`. Once you've confirmed everything works as expected, then you can start planning moving into the production.
 
 :::info
-Learn how to deploy your project into multiple environments with the [`deploy`](http://localhost:3000/docs/how-to-guides/deployment/deploy-your-project) command.
+Learn how to deploy your project into multiple environments with the [`deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
 :::
 
 ### Production Data Backups
