--- a/docs/key-topics/ci-cd/workflows.mdx
+++ b/docs/key-topics/ci-cd/workflows.mdx
@@ -14,19 +14,19 @@ description: Learn how to establish a CI/CD pipeline for your Webiny project.
 
 :::info
 
-Get your CI/CD set up in no time with the built-in [CI/CD scaffold](/docs/how-to-guides/ci-cd/use-the-cicd-scaffold).
+Get your CI/CD set up in no time with the built-in [CI/CD scaffold](/docs/how-to-guides/webiny-cli/scaffolding/ci-cd).
 
 :::
 
 ## Overview
 
-In this guide, we combine all of the concepts we covered in previous [Environments](/docs/how-to-guides/ci-cd/environments), [Version Control](/docs/how-to-guides/ci-cd/version-control), [Managing Cloud Infrastructure Files](/docs/how-to-guides/ci-cd/cloud-infrastructure-state-files), and [Testing](/docs/how-to-guides/ci-cd/testing) articles, in order to establish a complete CI/CD workflow. In case you missed those, we encourage you to check them out first.
+In this guide, we combine all of the concepts we covered in previous [Environments](/docs/key-topics/ci-cd/environments), [Version Control](/docs/key-topics/ci-cd/version-control), [Managing Cloud Infrastructure Files](/docs/key-topics/ci-cd/cloud-infrastructure-state-files), and [Testing](/docs/key-topics/ci-cd/testing) articles, in order to establish a complete CI/CD workflow. In case you missed those, we encourage you to check them out first.
 
 Before we continue, please note there are no hard-rules when implementing your own CI/CD workflow. Certainly, there are some best practices, but do note that the workflow we're about to outline here can be modified and adjusted to your needs.
 
 :::info
 
-If you'd like to learn more about the CI/CD practice in general and all of the different phases it consists of, check out the [CI/CD](/docs/key-topics/ci-cd) key topic.
+If you'd like to learn more about the CI/CD practice in general and all of the different phases it consists of, check out the [CI/CD](/docs/key-topics/ci-cd/introduction) key topic.
 
 :::
 
@@ -57,7 +57,7 @@ Typically, every commit pushed into one of these long-lived branches should trig
 :::
 
 :::tip
-The `dev` branch is usually what we select as the [default branch](/docs/how-to-guides/ci-cd/version-control#shared-branches) of our project's Git repository.
+The `dev` branch is usually what we select as the [default branch](/docs/key-topics/ci-cd/version-control#shared-branches) of our project's Git repository.
 :::
 
 ### Short-lived Branches and Environments
@@ -95,7 +95,7 @@ With this overview, let's continue by going step-by-step into how everything wor
 
 Developers start their development process by creating a new branch from the `dev` long-lived branch. Once they feel that a particular feature or a fix they've been working on is ready, they submit a new pull request (PR), where the target branch is again `dev`.
 
-As mentioned above, when a PR is submitted, we want to run different types of tests against a project that was dynamically deployed into a [short-lived (ephemeral)](/docs/how-to-guides/ci-cd/testing#deploying-short-lived-ephemeral-environments-for-testing-purposes) test environment. Once all tests are passing, we can then approve the PR and merge its code changes into the `dev` branch.
+As mentioned above, when a PR is submitted, we want to run different types of tests against a project that was dynamically deployed into a [short-lived (ephemeral)](/docs/key-topics/ci-cd/testing#deploying-short-lived-ephemeral-environments-for-testing-purposes) test environment. Once all tests are passing, we can then approve the PR and merge its code changes into the `dev` branch.
 
 <!-- vale off -->
 
@@ -110,7 +110,7 @@ As mentioned above, when a PR is submitted, we want to run different types of te
 
 ### 2. Merge Changes To `staging` Branch
 
-Once all of the pending PRs have been tested successfully and merged into the `dev` branch, we then continue by merging the `dev` branch into `staging`. This can be done either via a new PR or a direct merge, but we recommend the former. This is simply because creating a PR first allows us to maybe [preview the deployment](/docs/how-to-guides/ci-cd/testing#testing-cloud-infrastructure-changes) that will happen once the code is merged, and maybe perform some other tests.
+Once all of the pending PRs have been tested successfully and merged into the `dev` branch, we then continue by merging the `dev` branch into `staging`. This can be done either via a new PR or a direct merge, but we recommend the former. This is simply because creating a PR first allows us to maybe [preview the deployment](/docs/key-topics/ci-cd/testing#testing-cloud-infrastructure-changes) that will happen once the code is merged, and maybe perform some other tests.
 
 <!-- vale off -->
 
@@ -143,7 +143,7 @@ Unlike with the previous approach, here, once the release has been completed, we
 
 #### The Recommended Strategy
 
-Because of the following, our recommendation is to use the first [Choosing `staging` As The Target Branch](/docs/how-to-guides/ci-cd/workflows#choosing-staging-as-the-target-branch) strategy:
+Because of the following, our recommendation is to use the first [Choosing `staging` As The Target Branch](/docs/key-topics/ci-cd/workflows#choosing-staging-as-the-target-branch) strategy:
 
 - new fixes and features are frequently merged into the `dev` branch, which can make it unstable
 - at any point in time, we should be able to merge new features, fixes, and even experiments into the `dev` branch
