--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -38,7 +38,7 @@ For more information, please visit the [Use Watch Command](/docs/how-to-guides/w
 
 ### `yarn webiny deploy --env {dev}`
 
-Builds all of the [project applications](http://localhost:3000/docs/key-topics/project-organization/project-applications-and-packages) and deploys cloud infrastructure resources defined within them, into the specified environment.
+Builds all of the [project applications](/docs/key-topics/project-organization/project-applications-and-packages) and deploys cloud infrastructure resources defined within them, into the specified environment.
 
 By default, the command will deploy project applications into the `dev` environment. But, you can specify a different one using the `--env` argument.
 
