fix: replace "establish" with "set up"

--- a/docs/key-topics/ci-cd/workflows.mdx
+++ b/docs/key-topics/ci-cd/workflows.mdx
@@ -3,12 +3,12 @@ id: workflows
 title: Workflows
 sidebar_label: Workflows
 keywords: ["webiny", "continuous", "integration", "delivery"]
-description: Learn how to establish a CI/CD pipeline for your Webiny project.
+description: Learn how to set up a CI/CD pipeline for your Webiny project.
 ---
 
 :::tip What you'll learn
 
-- how to establish a CI/CD workflow for your Webiny project
+- how to set up a CI/CD workflow for your Webiny project
 
 :::
 
