fix: link CI/CD KTs

--- a/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
@@ -3,7 +3,7 @@ id: ci-cd
 title: Set up CI/CD
 sidebar_label: Set up CI/CD
 keywords: ["webiny", "continuous", "integration", "delivery", "ci", "cd", "scaffold"]
-description: Learn how to establish a CI/CD pipeline for your Webiny project.
+description: Learn how to set up a CI/CD pipeline for your Webiny project.
 ---
 
 import CenteredImage from "@components/CenteredImage";
@@ -24,7 +24,7 @@ This feature is available since **v5.7.0**.
 
 ## Overview
 
-In order to set up your own CI/CD workflow faster (with all of the concepts, steps, and strategies explained in previous guides), we recommend you use the built-in CI/CD scaffold.
+In order to set up your own CI/CD workflow faster (with all of the concepts, steps, and strategies explained in the [CI/CD](/docs/key-topics/ci-cd/introduction) key topics), we recommend you use the built-in CI/CD scaffold.
 
 To use it, simply run the following command from your project root:
 
