--- a/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
@@ -32,7 +32,7 @@ To use it, simply run the following command from your project root:
 yarn webiny scaffold
 ```
 
-Once the list of all available scaffolds has been shown, select the **Set up CI/CD** option and continue by answering the questions that will follow.
+Once the list of all available scaffolds is shown, select the **Set up CI/CD** option and continue by answering the questions that will follow.
 
 ## Different CI/CD Providers
 
