--- a/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
@@ -36,7 +36,7 @@ Once the list of all available scaffolds is shown, select the **Set up CI/CD** o
 
 ## Different CI/CD Providers
 
-At the moment, the scaffold allows you to set up your CI/CD with [GitHub Actions](https://github.com/features/actions) only, but in the future, we would certainly like to also see support for more providers, depending on the interest from the community.
+At the moment, the scaffold allows you to set up your CI/CD with [GitHub Actions](https://github.com/features/actions) only. But in the future, we would certainly like to also bring support for more providers, depending on the interest from the community.
 
 :::tip
 If you plan to use a different CI/CD provider, you can still create your workflows manually, by following all of the recommendations outlined in [CI/CD key topics](/docs/key-topics/ci-cd/introduction). Also, if you think your provider should be supported out of the box, please [open an issue](https://github.com/webiny/webiny-js/issues) or [contact us](https://www.webiny.com/slack).
@@ -48,7 +48,7 @@ If you plan to use a different CI/CD provider, you can still create your workflo
   <CenteredImage shadow={false} lightbox={false} alt="GitHub Actions" src={ghActions} />
 </a>
 
-[GitHub Actions](https://github.com/features/actions) are often a good choice when it comes to setting up your own CI/CD, simply because its tight integration with other existing GitHub resources.
+[GitHub Actions](https://github.com/features/actions) are often a good choice when it comes to setting up your own CI/CD, simply because its tight integration with other existing GitHub concepts and resources.
 
 :::caution
 Upon running this scaffold, note that you will need to paste your GitHub account's personal access token. You can choose to use an existing one, or even better, create a new one simply by clicking on the [following link](https://github.com/settings/tokens/new?scopes=repo,workflow&description=webiny-cicd-token).
