--- a/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
@@ -48,7 +48,7 @@ If you plan to use a different CI/CD provider, you can still create your workflo
   <CenteredImage shadow={false} lightbox={false} alt="GitHub Actions" src={ghActions} />
 </a>
 
-[GitHub Actions](https://github.com/features/actions) are often a good choice when it comes to setting up your own CI/CD, simply because its tight integration with other existing GitHub concepts and resources.
+[GitHub Actions](https://github.com/features/actions) are often a good choice when it comes to setting up your own CI/CD, simply because of its tight integration with other existing GitHub concepts and resources.
 
 :::caution
 Upon running this scaffold, note that you will need to paste your GitHub account's personal access token. You can choose to use an existing one, or even better, create a new one simply by clicking on the [following link](https://github.com/settings/tokens/new?scopes=repo,workflow&description=webiny-cicd-token).
@@ -131,7 +131,7 @@ Learn how to create AWS credentials in the [Configure AWS Credentials](/docs/how
 
 Upon deploying cloud infrastructure resources with [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), we need to specify the secrets provider. As the name itself suggest, this feature enables us to store deployment-related secrets, for example API keys, connection credentials, and similar.
 
-And although Webiny does not store nor rely this feature by default, we still need to define the `PULUMI_SECRETS_PROVIDER` and `PULUMI_CONFIG_PASSPHRASE` environment variables. This is simply a requirement set by the Pulumi CLI.
+And although Webiny does not store nor rely on this feature by default, we still need to define the `PULUMI_SECRETS_PROVIDER` and `PULUMI_CONFIG_PASSPHRASE` environment variables. This is simply a requirement set by the Pulumi CLI.
 
 :::tip
 To learn more about secrets and how Pulumi handles them, please visit the [official documentation](https://www.pulumi.com/docs/intro/concepts/secrets/).
@@ -140,7 +140,7 @@ To learn more about secrets and how Pulumi handles them, please visit the [offic
 We suggest you use "passphrase" as the value of the `PULUMI_SECRETS_PROVIDER` secret, and, for the `PULUMI_CONFIG_PASSPHRASE` secret, that you simply generate a random string as its value.
 
 :::danger
-Be careful not to lose the generated `PULUMI_CONFIG_PASSPHRASE` secret value. Because if you do, you won't be able to redeploy already deployed cloud infrastructure resources. You will have to do it from scratch, which means you could potentially loose sensitive data.
+Be careful not to lose the generated `PULUMI_CONFIG_PASSPHRASE` secret value. Because if you do, you won't be able to redeploy already deployed cloud infrastructure resources. You will have to do it from scratch, which means you could potentially lose sensitive data.
 :::
 
 ###### 3. `WEBINY_PULUMI_BACKEND`
