--- a/docs/changelog/5.7.0.mdx
+++ b/docs/changelog/5.7.0.mdx
@@ -7,6 +7,7 @@ description: See what's new in Webiny version 5.7.0.
 ---
 
 import CenteredImage from "@components/CenteredImage";
+import cicdScaffold from "./5.7.0/ci-cd-scaffold.gif"
 
 # Changes
 
@@ -18,12 +19,23 @@ Apart from updating `@webiny/*` packages, there are no special steps that need t
 
 ## Webiny CLI
 
+### Brand new CI/CD Scaffold ([#1633](https://github.com/webiny/webiny-js/pull/1633))
 
-## Docs
+With this release, we're introducing a brand new CI/CD scaffold, which will set up a CI/CD workflow for your Webiny project in no time!
+
+<CenteredImage title="New CI/CD Scaffold" src={cicdScaffold}/>
+
+Currently, you can set up your CI/CD via [GitHub Actions](https://github.com/features/actions) only. But note that in the future, we would certainly like to bring support for more providers, depending on the interest from the community.
+
+For more information on how to use the new scaffold, make sure to check out the also new [Set up CI/CD](#/docs/how-to-guides/webiny-cli/scaffolding/ci-cd) how-to guide.
+
+:::tip
+If you plan to use a different CI/CD provider, you can still create your workflows manually, by following all of the recommendations outlined in the new [CI/CD](#/docs/key-topics/ci-cd/introduction) key topics section. Also, if you think your provider should be supported out of the box, please [open an issue](https://github.com/webiny/webiny-js/issues/new) or [contact us](https://www.webiny.com/slack).
+:::
+
+
+## Documentation
 
 ### New CI/CD Key Topics
 
-We've just released a brand new CI/CD key topics section
-
-### The Reference Field Can Now Reference Different Content Models ([#1572](https://github.com/webiny/webiny-js/pull/1572))
-
+We've just published the brand new [CI/CD](#/docs/key-topics/ci-cd/introduction) key topics section, which, as you might've already guessed, covers everything that there is to know about setting up a CI/CD workflow for your Webiny projects.
