wip: create changelog

--- a/docs/changelog/5.7.0.mdx
+++ b/docs/changelog/5.7.0.mdx
@@ -33,6 +33,17 @@ For more information on how to use the new scaffold, make sure to check out the 
 If you plan to use a different CI/CD provider, you can still create your workflows manually, by following all of the recommendations outlined in the new [CI/CD](#/docs/key-topics/ci-cd/introduction) key topics section. Also, if you think your provider should be supported out of the box, please [open an issue](https://github.com/webiny/webiny-js/issues/new) or [contact us](https://www.webiny.com/slack).
 :::
 
+### Improved `--debug` Argument `webiny deploy` and `webiny destroy` Commands)  ([#1624](https://github.com/webiny/webiny-js/pull/1624), [@ankurvr](https://github.com/ankurvr))
+
+From this release, passing the `--debug` flag upon running the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) and [`webiny destroy`](/docs/how-to-guides/deployment/destroy-cloud-infrastructure) commands will also include additional deployment-related information and logs.
+
+The following example shows how you can use it with the `webiny deploy` command:
+
+```bash
+yarn webiny deploy api --env dev --debug
+```
+
+This improvement will be very useful because without it, upon experiencing deployment-related errors, users simply wouldn't receive enough information, which would make debugging much harder and in certain cases, even almost impossible.
 
 ## Documentation
 
