fix: use `bash` as snippet type

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -40,7 +40,7 @@ As explained in the [introduction to deployment](/docs/key-topics/deployment/int
 ### Deploying the Whole Project
 To completely deploy your project, simply run the following command in your terminal of choice:
 
-```
+```bash
 yarn webiny deploy
 ```
 
@@ -59,7 +59,7 @@ Note that the first deployment can take up to 20 minutes! So even though it migh
 ### Environments
 In general, when deploying projects or project applications, an [environment](/docs/key-topics/deployment/environments) must be specified. The above shown `deploy` command deploys your project into the `dev` environment by default, but you can also specify a different environment with the `--env` argument. For example, to deploy your project into the `prod` environment, you can run the following command:
 
-```
+```bash
 yarn webiny deploy --env prod
 ```
 
@@ -67,7 +67,7 @@ yarn webiny deploy --env prod
 
 To deploy a specific project application, located withing your Webiny project, simple append the path to the folder in which the project application resides, for example:
 
-```
+```bash
 yarn webiny deploy api --env dev
 yarn webiny deploy apps/admin --env dev
 yarn webiny deploy apps/website --env dev
@@ -79,7 +79,7 @@ Note that when deploying a specific project application, the environment (`--env
 
 It's worth mentioning that the deployment commands shown above also build your application code. They perform this task by just running the following [`workspaces run`](/docs/how-to-guides/webiny-cli/working-with-workspaces) command:
 
-```
+```bash
 yarn webiny workspaces run build --folder {STACK_FOLDER}
 ```
 
@@ -100,7 +100,7 @@ In some cases, upon deploying a new Webiny project, it's possible for users to e
 
 In some cases, upon deploying a new Webiny project, it's possible for users to experience the following error being thrown in their terminal:
 
-```
+```bash
 SubscriptionRequiredException: The AWS Access Key Id needs a subscription for the service
 ```
 
