--- a/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
+++ b/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
@@ -42,7 +42,7 @@ As its first argument, the `destroy` command receives the path to the project ap
 
 The following destroy commands destroy cloud infrastructure deployed for three project applications, all previously deployed into the `dev` environment:
 
-```
+```bash
 yarn webiny destroy api --env dev
 yarn webiny destroy apps/admin --env dev
 yarn webiny destroy apps/website --env dev
