--- a/docs/how-to-guides/deployment/preview-deployments.mdx
+++ b/docs/how-to-guides/deployment/preview-deployments.mdx
@@ -21,7 +21,7 @@ When doing more significant changes, it might be helpful to preview the deployme
 
 In order to avoid performing unintended cloud infrastructure changes, you can use the preview flag upon executing the [deploy](/docs/how-to-guides/deployment/deploy-your-project#the-app-deploy-command) command. Consider the following examples:
 
-```
+```bash
 webiny deploy api --env dev --preview
 webiny deploy apps/admin --env dev --preview
 webiny deploy apps/website --env dev --preview
