fix: add --debug flag information

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -75,6 +75,16 @@ yarn webiny deploy apps/website --env dev
 
 Note that when deploying a specific project application, the environment (`--env`) argument is not optional, it must always be set.
 
+## Debugging
+
+If you run into an error while running the `webiny deploy` command, to get additional information and logs about it, you can append the `--debug` argument. For example:
+
+```bash
+yarn webiny deploy api --env dev --debug
+```
+
+This can significantly help in debugging underlying deployment ([Pulumi](/docs/key-topics/deployment/iac-with-pulumi)) errors, since without it, in some cases the returned error report doesn't contain enough useful information. We've also seen cases in which the report would actually be misleading and even incorrect, making the debugging process much harder for the user.
+
 ## Building the Application Code
 
 It's worth mentioning that the deployment commands shown above also build your application code. They perform this task by just running the following [`workspaces run`](/docs/how-to-guides/webiny-cli/working-with-workspaces) command:
