--- a/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
+++ b/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
@@ -48,6 +48,16 @@ yarn webiny destroy apps/admin --env dev
 yarn webiny destroy apps/website --env dev
 ```
 
+## Debugging
+
+If you run into an error while running the `webiny destroy` command, to get additional information and logs about it, you can append the `--debug` argument. For example:
+
+```bash
+yarn webiny destroy api --env dev --debug
+```
+
+This can significantly help in debugging underlying deployment ([Pulumi](/docs/key-topics/deployment/iac-with-pulumi)) errors, since without it, in some cases the returned error report doesn't contain enough useful information. We've also seen cases in which the report would actually be misleading and even incorrect, making the debugging process much harder for the user.
+
 ## Troubleshooting
 
 #### Destroying my project takes a long time to finish
