--- a/docs/how-to-guides/deployment/preview-deployments.mdx
+++ b/docs/how-to-guides/deployment/preview-deployments.mdx
@@ -39,3 +39,13 @@ Executing these commands won't perform any changes to your cloud infrastructure 
 />
 
 <!-- vale on -->
+
+## Debugging
+
+If you run into an error while running a deployment preview, to get additional information and logs about it, you can append the `--debug` argument to the `webiny deploy` command. For example:
+
+```bash
+yarn webiny deploy api --env dev --preview --debug
+```
+
+This can significantly help in debugging underlying deployment ([Pulumi](/docs/key-topics/deployment/iac-with-pulumi)) errors, since without it, in some cases the returned error report doesn't contain enough useful information. We've also seen cases in which the report would actually be misleading and even incorrect, making the debugging process much harder for the user.
