fix: link security key topics and tutorial

--- a/docs/key-topics/security-framework/api-security.mdx
+++ b/docs/key-topics/security-framework/api-security.mdx
@@ -16,6 +16,10 @@ import requestLifecycleImage from "../assets/security-framework/request-lifecycl
 
 :::
 
+:::info
+If you just want to jump straight into the code, take a look at the [Securing Your Application](/docs/tutorials/create-an-application/security/introduction) tutorials section.
+:::
+
 In this article, we cover how Webiny Security Framework (_WSF_ for short) works in the context of Webiny API, what hooks it introduces, and how it hooks into the existing request lifecycle hooks to perform its main tasks (like authentication and authorization).
 
 :::info
@@ -24,7 +28,8 @@ This article uses terms like authentication, authorization, identity, and permis
 
 :::
 
-WSF itself, just as any other Webiny application, is a collection of plugins. When these plugins are registered into the application, WSF hooks into some request lifecycle hooks. By doing so, it adds new tools and introduces new hooks to allow developers write plugins for them. 
+
+WSF itself, just as any other Webiny application, is a collection of plugins. When these plugins are registered into the application, WSF hooks into some request lifecycle hooks. By doing so, it adds new tools and introduces new hooks to allow developers write plugins for them.
 
 The term _hook_ is just used to denote that, at a certain point in time, plugins of that type will be processed (e.g., `context` hook means that plugins of type `context` will be processed).
 
@@ -103,7 +108,7 @@ The important part is that some time during code execution (`4`) some part of yo
 export default async (parent, args, context) => {
   // Check if the identity is authorized to execute this resolver
   const permission = await context.security.getPermission("my-permission");
-  
+
   if (!permission) {
     // Not authorized!
     throw new NotAuthorizedError();
