--- a/docs/key-topics/security-framework/react-security.mdx
+++ b/docs/key-topics/security-framework/react-security.mdx
@@ -15,6 +15,10 @@ import reactIdPAPI from "../assets/security-framework/react-idp-api.png";
 
 :::
 
+:::info
+If you just want to jump straight into the code, take a look at the [Securing Your Application](/docs/tutorials/create-an-application/security/introduction) tutorials section.
+:::
+
 :::caution Important
 This article is a continuation of the previous two articles about Webiny Security Framework. If you haven't already, please do read the [Introduction](/docs/key-topics/security-framework/introduction) and [API Security](/docs/key-topics/security-framework/api-security) articles before continuing.
 :::
@@ -109,6 +113,6 @@ export default () => {
 
 ## Conclusion
 
-React applications load user permissions from the API, meaning they share the same permission objects. Handling of login is the responsibility of each individual React application and can be implemented in a number of ways, depending on your project requirements. 
+React applications load user permissions from the API, meaning they share the same permission objects. Handling of login is the responsibility of each individual React application and can be implemented in a number of ways, depending on your project requirements.
 
 The only requirement from the Webiny API is that you provide the necessary plugins to authenticate your JWT token and load identity's permissions.
