--- a/docs/tutorials/create-an-application/security/admin-area.mdx
+++ b/docs/tutorials/create-an-application/security/admin-area.mdx
@@ -28,6 +28,11 @@ import hidingNewButtonHidden from "./assets/hiding-new-button-hidden.png";
 - how to prevent unauthorized users from seeing user-interface sections in Webiny Admin Area
 :::
 
+:::info
+Learn more about the Webiny Security Framework in the [Security Framework](/docs/key-topics/security-framework/introduction) key topics section.
+:::
+
+
 ## Overview
 
 :::info
