--- a/docs/tutorials/create-an-application/security/graphql-api.mdx
+++ b/docs/tutorials/create-an-application/security/graphql-api.mdx
@@ -17,6 +17,10 @@ import createTestUser from "./assets/create-test-user.png";
 - prevent unauthorized users from performing sensitive GraphQL API queries and mutations
 :::
 
+:::info
+Learn more about the Webiny Security Framework in the [Security Framework](/docs/key-topics/security-framework/introduction) key topics section.
+:::
+
 ## Overview
 
 :::info
