--- a/docs/tutorials/create-an-application/security/introduction.mdx
+++ b/docs/tutorials/create-an-application/security/introduction.mdx
@@ -18,6 +18,10 @@ import securityGroupsModule from "./assets/security-groups-module.png";
 - how to add a new permissions section to the Webiny Security application's security group form
 :::
 
+:::info
+Learn more about the Webiny Security Framework in the [Security Framework](/docs/key-topics/security-framework/introduction) key topics section.
+:::
+
 ## Overview
 
 In previous two sections, we've seen how we can quickly expand the GraphQL schema of the main GraphQL API, and also how we can add new modules in the Webiny Admin Area application. All with a couple of built-in scaffolding utilities.
