fix: add fourth Start Developing step

--- a/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
@@ -54,14 +54,14 @@ If you plan to use a different CI/CD provider, you can still create your workflo
 Upon running this scaffold, note that you will need to paste your GitHub account's personal access token. You can choose to use an existing one, or even better, create a new one simply by clicking on the [following link](https://github.com/settings/tokens/new?scopes=repo,workflow&description=webiny-cicd-token).
 :::
 
-#### Performed Actions
+#### What Actions Will The Scaffold Perform For Me?
 
 No matter whether you choose to set up your CI/CD within an existing GitHub code repository or create a new one, during the scaffolding process, the following actions will be taken on your behalf:
 
 1. push GitHub actions [workflows](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-ci/src/githubActions/files/workflows/.github/workflows)
 2. create [protected](https://docs.github.com/en/github/administering-a-repository/defining-the-mergeability-of-pull-requests/about-protected-branches) `dev`, `staging`, and `prod` branches
 3. set `dev` as the [default](https://docs.github.com/en/github/administering-a-repository/managing-branches-in-your-repository/changing-the-default-branch) branch
-4. create `dev`, `staging`, `prod`, and `pr` [code repository environments](https://docs.github.com/en/actions/reference/environments)
+4. create `dev`, `staging`, and `prod` [code repository environments](https://docs.github.com/en/actions/reference/environments)
 
 :::tip
 The created workflow files follow workflows described in the [CI/CD](#) key topics section. Before running them, you're free to inspect and adjust them to your needs.
@@ -156,3 +156,13 @@ If you choose to use Amazon S3 as the backend and you are using multiple AWS Acc
 :::info
 For more information on backends, we recommend you read the [Cloud Infrastructure State Files](/docs/key-topics/ci-cd/cloud-infrastructure-state-files#using-different-backends) key topic.
 :::
+
+##### 4. Start Developing
+
+To start developing, based on the [GitHub Flow](/docs/key-topics/ci-cd/version-control#github-flow), the first step of every developer would be to simply create a new branch from the default `dev` branch. Once ready, we submit a pull request, again against the `dev` branch.
+
+:::tip
+Read more about the GitHub Flow in the [Version Control](/docs/key-topics/ci-cd/version-control#github-flow) key topic.
+:::
+
+Note that, at this point, the `staging` and `prod` branches will still be empty, and no deployments will occur until you actually merge the `dev` branch into `staging`, and later the `staging` branch into `production`.  Still, if you want to deploy these too, simply do the merging immediately, without waiting for first code changes from developers to arrive.
