fix: correct link

--- a/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
@@ -64,7 +64,7 @@ No matter whether you choose to set up your CI/CD within an existing GitHub code
 4. create `dev`, `staging`, and `prod` [code repository environments](https://docs.github.com/en/actions/reference/environments)
 
 :::tip
-The created workflow files follow workflows described in the [CI/CD](#) key topics section. Before running them, you're free to inspect and adjust them to your needs.
+The created workflow files follow workflows described in the [CI/CD](/docs/key-topics/ci-cd/introduction) key topics section. Before running them, you're free to inspect and adjust them to your needs.
 :::
 
 :::info
