--- a/docs/changelog/5.7.0.mdx
+++ b/docs/changelog/5.7.0.mdx
@@ -27,13 +27,13 @@ With this release, we're introducing a brand new CI/CD scaffold, which will set 
 
 Currently, you can set up your CI/CD via [GitHub Actions](https://github.com/features/actions) only. But note that in the future, we would certainly like to bring support for more providers, depending on the interest from the community.
 
-For more information on how to use the new scaffold, make sure to check out the also new [Set up CI/CD](#/docs/how-to-guides/webiny-cli/scaffolding/ci-cd) how-to guide.
+For more information on how to use the new scaffold, make sure to check out the also new [Set up CI/CD](/docs/how-to-guides/webiny-cli/scaffolding/ci-cd) how-to guide.
 
 :::tip
-If you plan to use a different CI/CD provider, you can still create your workflows manually, by following all of the recommendations outlined in the new [CI/CD](#/docs/key-topics/ci-cd/introduction) key topics section. Also, if you think your provider should be supported out of the box, please [open an issue](https://github.com/webiny/webiny-js/issues/new) or [contact us](https://www.webiny.com/slack).
+If you plan to use a different CI/CD provider, you can still create your workflows manually, by following all of the recommendations outlined in the new [CI/CD](/docs/key-topics/ci-cd/introduction) key topics section. Also, if you think your provider should be supported out of the box, please [open an issue](https://github.com/webiny/webiny-js/issues/new) or [contact us](https://www.webiny.com/slack).
 :::
 
-### Improved `--debug` Argument `webiny deploy` and `webiny destroy` Commands)  ([#1624](https://github.com/webiny/webiny-js/pull/1624), [@ankurvr](https://github.com/ankurvr))
+### Improved `--debug` Argument (`webiny deploy` and `webiny destroy` Commands)  ([#1624](https://github.com/webiny/webiny-js/pull/1624), [@ankurvr](https://github.com/ankurvr))
 
 From this release, passing the `--debug` flag upon running the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) and [`webiny destroy`](/docs/how-to-guides/deployment/destroy-cloud-infrastructure) commands will also include additional deployment-related information and logs.
 
@@ -49,4 +49,4 @@ This improvement will be very useful because without it, upon experiencing deplo
 
 ### New CI/CD Key Topics
 
-We've just published the brand new [CI/CD](#/docs/key-topics/ci-cd/introduction) key topics section, which, as you might've already guessed, covers everything that there is to know about setting up a CI/CD workflow for your Webiny projects.
+We've just published the brand new [CI/CD](/docs/key-topics/ci-cd/introduction) key topics section, which, as you might've already guessed, covers everything that there is to know about setting up a CI/CD workflow for your Webiny projects.
