--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -90,7 +90,7 @@ By default, Webiny collects anonymous usage information, which is exclusively us
 
 #### Do I need to install Webiny CLI manually?
 
-No, Webiny CLI comes set up automatically with every new Webiny project. Note that it's not installed as a global tool, bu on a per-project basis. So, in theory, you could have two projects with different versions of the CLI.
+No, Webiny CLI comes set up automatically with every new Webiny project. Note that it's not installed as a global tool, but on a per-project basis. So, in theory, you could have two projects with different versions of the CLI.
 
 #### Do I need to invoke the Webiny CLI with `yarn`?
 
