fix(how-to-guides): update the graphql lambda

--- a/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
@@ -33,9 +33,9 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 
 ### Add DynamoDB + Elasticsearch plugins
 
-Due to some internal changes in how we store data to the database you must add new plugins to the Headless CMS API index.ts file.
+Due to some internal changes in how we store data to the database you must add new plugins to the Headless CMS and GraphQL API lambdas.
 
-First, you need to add new package to the `package.json`file in the `api/code/headlessCMS`, in the `dependencies` section.
+First, you need to add new package to the `package.json` file in the `api/code/headlessCMS`, in the `dependencies` section.
 
 ```json title="api/code/headlessCMS/package.json"
 "dependencies": {
@@ -45,9 +45,28 @@ First, you need to add new package to the `package.json`file in the `api/code/he
 }
 ```
 
-Then you need import new plugin from the new `@webiny/api-headless-cms-ddb-es` package.
+Then you need import the plugin from the new `@webiny/api-headless-cms-ddb-es` package.
 
 ```typescript title="api/code/headlessCMS/src/index.ts"
+// somewhere after the last import
+import headlessCmsDynamoDbElasticsearch from "@webiny/api-headless-cms-ddb-es";
+
+// in the end of the createHandler function
+headlessCmsDynamoDbElasticsearch(),
+```
+
+After that you are done with the Headless CMS, you do the same thing for the`api/code/graphql` `package.json` and `index.ts` file.
+```json title="api/code/graphql/package.json"
+"dependencies": {
+	....
+	"@webiny/api-headless-cms-ddb-es": "^5.8.0"
+	....
+}
+```
+
+Then you import the plugin from the `@webiny/api-headless-cms-ddb-es` package.
+
+```typescript title="api/code/graphql/src/index.ts"
 // somewhere after the last import
 import headlessCmsDynamoDbElasticsearch from "@webiny/api-headless-cms-ddb-es";
 
