fix(how-to-guides): remove changelog url to make the preview available

--- a/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
@@ -15,7 +15,7 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 :::
 
 :::info
-Make sure to check out the [5.8.0 changelog](/docs/changelog/5.8.0) to get familiar with all the changes  introduced in this release.
+Make sure to check out the [5.8.0 changelog]__(/docs/changelog/5.8.0) to get familiar with all the changes  introduced in this release.
 :::
 
 ## Upgrade Webiny Packages
