--- a/docs/tutorials/create-an-application/security/introduction.mdx
+++ b/docs/tutorials/create-an-application/security/introduction.mdx
@@ -14,8 +14,9 @@ import contentLocaleSection from "./assets/content-locale-section.png";
 import securityGroupsModule from "./assets/security-groups-module.png";
 
 :::tip What you'll learn
-- what are security permissions and, on the code level, security permission objects
-- how to add a new permissions section to the Webiny Security application's security group form
+
+- what are security permissions and how to use them in code
+- how to add custom permissions UI to permissions editor in Admin Area
 :::
 
 :::info
@@ -47,7 +48,7 @@ The code that we will cover in this tutorial can also be found in our [GitHub ex
 
 On the code level, security permissions are just plain JavaScript objects, which allow us to perform identity [authorization](https://en.wikipedia.org/wiki/Authorization). In other words, these objects contain information that tells us which resources an identity (for example, a logged-in user) can access, and which it cannot.
 
-"Can this user access this GraphQL query?", "Can this user edit this particular piece of data?", or "Can this user view this particular piece of user interface?, are just some of the questions that security permission objects can answer for us.
+"Can this user access this GraphQL query?", "Can this user edit this particular piece of data?", or "Can this user view this particular piece of user interface?", are just some questions that security permission objects can answer for us.
 
 Except for the required `name` property, these objects don't follow any strict structure, which means that while we're developing our custom application, we can structure them in any way that fits our needs and business logic.
 
@@ -115,83 +116,84 @@ const t = i18n.ns("app-i18n/admin/plugins/permissionRenderer");
 const PERMISSION_NAME = "car-manufacturers";
 
 export default {
-    type: "admin-app-permissions-renderer",
-    name: "admin-app-permissions-renderer-car-manufacturers",
-    render(props) {
-        // `value` represents an array of all permission objects selected for the
-        // security group we're currently editing. To apply changes to the `value`
-        // array, we use the provided `onChange` callback.
-        const { value, onChange } = props;
+  type: "admin-app-permissions-renderer",
+  name: "admin-app-permissions-renderer-car-manufacturers",
+  render(props) {
+    // `value` represents an array of all permission objects selected for the
+    // security group we're currently editing. To apply changes to the `value`
+    // array, we use the provided `onChange` callback.
+    const { value, onChange } = props;
 
-        // Callback that gets triggered whenever a form element has changed.
-        // If needed, additional object manipulations can be performed too.
-        const onFormChange = useCallback(
-            data => {
-                // Let's filter out the `car-manufacturer` permission object.
-                // It's just easier to build a new one from scratch.
-                const newPermissions = value.filter(item => item.name !== PERMISSION_NAME);
+    // Callback that gets triggered whenever a form element has changed.
+    // If needed, additional object manipulations can be performed too.
+    const onFormChange = useCallback(
+      data => {
+        // Let's filter out the `car-manufacturer` permission object.
+        // It's just easier to build a new one from scratch.
+        const newPermissions = value.filter(item => item.name !== PERMISSION_NAME);
 
-                // We only want the permissions object to end up in the `value` array if
-                // we have a value in `rwd` or `specialFeature` properties.
-                if (data.rwd || data.specialFeature) {
-                    newPermissions.push(data);
-                }
+        // We only want the permissions object to end up in the `value` array if
+        // we have a value in `rwd` or `specialFeature` properties.
+        if (data.rwd || data.specialFeature) {
+          newPermissions.push(data);
+        }
 
-                // Finally, call the `onChange` callback to assign the permissions
-                // object into the `value`.
-                onChange(newPermissions);
-            },
-            [value]
-        );
+        // Finally, call the `onChange` callback to assign the permissions
+        // object into the `value`.
+        onChange(newPermissions);
+      },
+      [value]
+    );
 
-        // Set up default form data, which happens once the security group data
-        // has been retrieved from the GraphQL API.
-        const defaultFormData = useMemo(() => {
-            return value.find(item => item.name === PERMISSION_NAME) || { name: PERMISSION_NAME };
-        }, [value]);
+    // Set up default form data, which happens once the security group data
+    // has been retrieved from the GraphQL API.
+    const defaultFormData = useMemo(() => {
+      return value.find(item => item.name === PERMISSION_NAME) || { name: PERMISSION_NAME };
+    }, [value]);
 
-        // We are using a couple of different React components to get the job done:
-        // - for a nicer UI - AccordionItem, Grid, Cell, and PermissionInfo components
-        // - for working with forms - Form, Bind, Select, and Switch components
-        return (
-            <AccordionItem
-                icon={<CarManufacturersIcon />}
-                title={t`Car Manufacturers`}
-                description={t`Manage Car Manufacturer app access permissions.`}
-            >
-                <Form data={defaultFormData} onChange={onFormChange}>
-                    {({ Bind }) => (
-                        <Grid>
-                            <Cell span={6}>
-                                <PermissionInfo title={t`Access Level`} />
-                            </Cell>
-                            <Cell span={6}>
-                                <Grid>
-                                    <Cell span={12}>
-                                        <Bind name={"rwd"}>
-                                            <Select label={t`Access Level`}>
-                                                <option value={""}>{t`No Access`}</option>
-                                                <option value={"r"}>{t`Read`}</option>
-                                                <option value={"rw"}>{t`Read, write`}</option>
-                                                <option value={"rwd"}>{t`Read, write, delete`}</option>
-                                            </Select>
-                                        </Bind>
-                                    </Cell>
-                                    <Cell span={12}>
-                                        <Bind name={"specialFeature"}>
-                                            <Switch label={t`Has access to a special feature`} />
-                                        </Bind>
-                                    </Cell>
-                                </Grid>
-                            </Cell>
-                        </Grid>
-                    )}
-                </Form>
-            </AccordionItem>
-        );
-    }
+    // We are using a couple of different React components to get the job done:
+    // - for a nicer UI - AccordionItem, Grid, Cell, and PermissionInfo components
+    // - for working with forms - Form, Bind, Select, and Switch components
+    return (
+      <AccordionItem
+        icon={<CarManufacturersIcon />}
+        title={t`Car Manufacturers`}
+        description={t`Manage Car Manufacturer app access permissions.`}
+      >
+        <Form data={defaultFormData} onChange={onFormChange}>
+          {({ Bind }) => (
+            <Grid>
+              <Cell span={6}>
+                <PermissionInfo title={t`Access Level`} />
+              </Cell>
+              <Cell span={6}>
+                <Grid>
+                  <Cell span={12}>
+                    <Bind name={"rwd"}>
+                      <Select label={t`Access Level`}>
+                        <option value={""}>{t`No Access`}</option>
+                        <option value={"r"}>{t`Read`}</option>
+                        <option value={"rw"}>{t`Read, write`}</option>
+                        <option value={"rwd"}>{t`Read, write, delete`}</option>
+                      </Select>
+                    </Bind>
+                  </Cell>
+                  <Cell span={12}>
+                    <Bind name={"specialFeature"}>
+                      <Switch label={t`Has access to a special feature`} />
+                    </Bind>
+                  </Cell>
+                </Grid>
+              </Cell>
+            </Grid>
+          )}
+        </Form>
+      </AccordionItem>
+    );
+  }
 } as AdminAppPermissionRendererPlugin;
 ```
+
 :::info
 In order to actually compile the code changes we're about to make and see them in browser, we need to run the following Webiny CLI command:
 
