docs: Added the information to list AWS resources used by the project application
The Pulumi stack command list all the AWS resources and services that are used by a project.
We can execute the Pulumi command with Webiny CLI, documented the sample command and output.

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -75,6 +75,41 @@ yarn webiny deploy apps/website --env dev
 
 Note that when deploying a specific project application, the environment (`--env`) argument is not optional, it must always be set.
 
+## List AWS resources
+After deployment, you can view the list of AWS resources and services used by your project application.
+As mentioned above, every Webiny project, by default, has three applications.
+The **api** (`./api`), which represents your project's (GraphQL) API, **admin** (`./apps/admin`), and the **website** (`./apps/website`), which is your public website.
+Each application uses several cloud infrastructure resources like Lambda functions, API Gateway, DynamoDB table, etc.
+
+To list the resources used by a particular application for an [environment](/docs/key-topics/deployment/environments), you can use the `stack` command.
+```bash
+yarn webiny pulumi <application-name> --env <environment-name> stack
+```
+
+For example, to list resources used by the `api` application for `dev` environment, run the following command:
+
+```bash
+yarn webiny pulumi api --env dev stack
+```
+
+<!-- vale off -->
+
+<img
+  src={require("./assets/deploy-your-project/list-aws-resources.png").default}
+  className="no-shadow"
+  style={{ borderRadius: 0 }}
+  alt="Previewing Stack command"
+/>
+
+<!-- vale on -->
+
+Similarly, you can use the following commands to list AWS resources used by the `admin` and `website` application for the `dev` environment.
+
+```bash
+yarn webiny pulumi apps/admin --env dev stack
+yarn webiny pulumi apps/website --env dev stack
+```
+
 ## Debugging
 
 If you run into an error while running the `webiny deploy` command, to get additional information and logs about it, you can append the `--debug` argument. For example:
